
    HIVE-708. Add TypedBytes SerDe for transform. (Namit Jain via zshao)

    HIVE-777. CREATE TABLE with STRUCT type. (He Yongqiang via zshao)

    HIVE-792. Support "add archive" in addition to "add file" and "add jar".
    (He Yongqiang via zshao)

    HIVE-645. UDF to run JDBC
    (Edward Capriolo via namit)

    HIVE-785. Add RecordWriter for ScriptOperator. (Namit Jain via zshao)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

    HIVE-732. Use LazyBinarySerDe (Zheng Shao via namit)

    HIVE-768. Add conf var to disable counters introduced by HIVE-713.
    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)

    HIVE-811. Fix Javadocs. (Namit Jain via zshao)

    HIVE-813. Show the actual exception thrown in UDF evaluation
    (Zheng Shao via rmurthy)

    HIVE-756. Performance improvement for RCFile and ColumnarSerDe in Hive.
    (Ning Zhang via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)
    
    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

    HIVE-769. Bug in partition pruner checking - bug in patch. 
    (Zheng Shao via namit)

    HIVE-782. Bug in reducer progress (Raghu Murthy via namit)
  
    HIVE-780. Better error messages for wrong argument lengths in UDAFs
    (Zheng Shao via namit)

    HIVE-790. race conditions with script and union operators
    (Ning Zhang via namit)

    HIVE-798. remove UDAFSum and UDAFCount
    (Zheng Shao via namit)

    HIVE-778. add describe for div
    (Ning Zhang via namit)

    HIVE-755. Driver NullPointerException when calling getResults without first compiling
    (Eric Hwang via namit)
