@@ -29,6 +29,7 @@ DESCRIBE FUNCTION pow;
 DESCRIBE FUNCTION conv;
 DESCRIBE FUNCTION bin;
 DESCRIBE FUNCTION hex;
+DESCRIBE FUNCTION unhex;
 DESCRIBE FUNCTION upper;
 DESCRIBE FUNCTION lower;
 DESCRIBE FUNCTION ucase;
@@ -112,6 +113,7 @@ DESCRIBE FUNCTION EXTENDED pow;
 DESCRIBE FUNCTION EXTENDED conv;
 DESCRIBE FUNCTION EXTENDED bin;
 DESCRIBE FUNCTION EXTENDED hex;
+DESCRIBE FUNCTION EXTENDED unhex;
 DESCRIBE FUNCTION EXTENDED upper;
 DESCRIBE FUNCTION EXTENDED lower;
 DESCRIBE FUNCTION EXTENDED ucase;
